Removed the usage of deprecated/discontinued 3rd party APIs.